<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EncrypText</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_encrpyt">EncrpytActivity</string>
    <string name="title_activity_encrypt">EncryptActivity</string>
    <string name="title_activity_decrypt">DecryptActivity</string>
    <string name="title_activity_manage_key">ManageKeyActivity</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="manage_keys">Manage Keys</string>
    <string name="title_activity_manage_keys">ManageKeysActivity</string>
    <string name="title_activity_decrypted">DecryptedActivity</string>
    <string name="title_activity_encrypted">EncryptedActivity</string>
    <string name="paste">Paste</string>
    <string name="copy_text">Copy Text</string>
    <string name="copy_key">Copy Key</string>
    <string name="generate_random_new_key">New Key</string>
    <string name="store_key_button">Store This Key!</string>
    <string name="title_activity_enter__key">Enter_Key</string>
    <string name="title_activity_delete__keys">Delete_Keys</string>
    <string name="title_activity_view__keys">View_Keys</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_a_key_name">Enter a key name</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="delete">Delete</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter">Enter</string>
    <string name="paste_key_here">Paste key here</string>
    <string name="paste_key">Paste key</string>
    <string name="title_activity_view__list">View_List</string>
    <string name="title_activity_key_app">KeyApp</string>
    <string name="add_keys">Add a new key</string>
    <string name="view_keys">Manage your keys</string>
    <string name="title_activity_password_manager">PasswordManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="enterPassword">Please enter your password</string>
    <string name="newPassword">Set up a new password</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="newpw">Enter new password</string>
    <string name="newpwAgain">Enter new password again</string>
    <string name="emailAddress">your@email.address</string>
    <string name="proceed">Proceed!</string>
    <string name="reset">Reset password</string>
    <string name="forget">Forget Password</string>
    <string name="right">Right Password</string>
    <string name="wrong">Wrong Password</string>
    <string name="securityQn">Security question</string>
    <string name="securityAns">Answer to the security question</string>
    <string name="title_activity_security_qn">SecurityQn</string>
    <string name="enter_key">Enter key</string>
    <string name="enter_a_key">Enter a key</string>
    

</resources>
