<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".Enter_Key" >

    <EditText
        android:id="@+id/PasteKeyEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp"
        android:layout_below="@+id/PasteKey"
        android:ems="10"
        android:hint="@string/paste_key" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/enterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp"
        android:layout_below="@+id/name"
        android:ems="10"
        android:hint="@string/enter_a_name" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterName"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/enter_name" />

    <Button
        android:id="@+id/Enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterName"
        android:layout_below="@+id/enterName"
        android:onClick="addAKey"
        android:text="@string/enter" />

    <Button
        android:id="@+id/generateRandomKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PasteKeyEdit"
        android:layout_below="@+id/PasteKeyEdit"
        android:onClick="randomKey"
        android:text="@string/generate_random_new_key" />

    <TextView
        android:id="@+id/PasteKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/PasteKeyEdit"
        android:layout_below="@+id/Enter"
        android:layout_marginTop="30dp"
        android:text="@string/paste_key_here" />

</RelativeLayout>