<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonEncrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/encrypt"
        android:onClick="startEncryptActivity" />

    <Button
        android:id="@+id/buttonDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonEncrypt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/decrypt"
        android:onClick="startDecryptActivity" />

    <Button
        android:id="@+id/buttonManageKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDecrypt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/manage_keys"
        android:onClick="startManageKeysActivity" />

</RelativeLayout>
